# projet-duck-hunt-partie-gui-duck-hunters

./: CMakeLists.txt  README.md  chien.cpp  chien.h  choix_level.cpp  choix_level.h  choix_level.ui  crosshair.cpp  crosshair.h  dialog.ui  duck.cpp  duck.h  ecran_acceuil.cpp  ecran_acceuil.h  ecran_acceuil.ui  firethread.cpp  firethread.h  game_over.cpp  game_over.h  game_over.ui  graphicsview.cpp  graphicsview.h  main.cpp  menu.cpp  menu.h  mice.qrc  mouse.cpp  munition.cpp  munition.h  pinchzoom.pro  round.cpp  round.h  score.cpp  score.h  setting.cpp  setting.h  setting.ui  workerthread.cpp  workerthread.h
.circleci/: config.yml
images/: sauvegarde.json
save/: MVPs.json
